# visight

./: .gitignore  README.md
mobile/: .gitignore  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/config/: config.dart
mobile/lib/routing/: router.dart  routes.dart
mobile/lib/views/: camera_screen.dart  details_screen.dart  home_screen.dart  recipe_creation_screen.dart  signin_screen.dart  signup_screen.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
server/: .env.example  docker-compose.yml
server/api/: .dockerignore  .env.example  CHANGELOG.md  LICENSE  cabal.project.freeze  dockerfile  visight.cabal
server/api/app/: Main.hs
server/api/src/: schema.sql
server/api/src/Database/: Connection.hs  Statements.hs
server/api/src/Handlers/: Images.hs  Users.hs
server/api/src/Models/: Image.hs  User.hs
server/ml/: .dockerignore  .gitignore  app.py  dockerfile  estimate.py  extract.py  requirements.txt
server/ml/models/: linear_regression_banana.pkl
server/visight-bruno/: bruno.json  collection.bru
server/visight-bruno/environments/: visight-test.bru
server/visight-bruno/images/: image [PUT].bru  imageById [GET].bru  images [DELETE].bru  images [GET].bru  images [POST].bru  imagesByUser [GET].bru  upload [POST].bru
server/visight-bruno/ml/: predict [POST].bru
(+12 files in other folders)
